--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,5 +1,7 @@
 .App {
   display: flex;
+  flex-direction: column;
+  text-align: center;
   justify-content: center;
   max-width: 800px;
   margin: 0 auto;
